Updated the Old English translation.

--- a/po/wesnoth-units/ang@latin.po
+++ b/po/wesnoth-units/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-08-27 00:17-0500\n"
+"PO-Revision-Date: 2011-11-10 18:05-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -757,7 +757,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
 msgid "Dwarvish Berserker"
-msgstr ""
+msgstr "Dƿeorgisc Beraserca"
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:19
@@ -807,7 +807,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Lord, race=dwarf
 #: data/core/units/dwarves/Lord.cfg:4
 msgid "Dwarvish Lord"
-msgstr ""
+msgstr "Dƿeorgisc Hlaford"
 
 #. [unit_type]: id=Dwarvish Lord, race=dwarf
 #: data/core/units/dwarves/Lord.cfg:19
@@ -836,7 +836,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
 msgid "Dwarvish Runesmith"
-msgstr ""
+msgstr "Dƿeorgisc Runsmiþ"
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:29
@@ -897,10 +897,11 @@ msgstr ""
 msgid "Dwarvish Thunderguard"
 msgstr ""
 
+# The "ulf" in "Ulfserker" means "wolf" in Old Norse, and "serker" is "serca" in Old English... thus "Ƿulfserca".
 #. [unit_type]: id=Dwarvish Ulfserker, race=dwarf
 #: data/core/units/dwarves/Ulfserker.cfg:4
 msgid "Dwarvish Ulfserker"
-msgstr ""
+msgstr "Dƿeorgisc Ƿulfserca"
 
 #. [unit_type]: id=Dwarvish Ulfserker, race=dwarf
 #: data/core/units/dwarves/Ulfserker.cfg:20
@@ -3144,6 +3145,7 @@ msgstr ""
 msgid "Great Wolf"
 msgstr "Great Ƿulf"
 
+# Just a phonetic repselling of "Yeti".
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
 msgid "Yeti"
@@ -4170,18 +4172,8 @@ msgid ""
 "however, neither used to, nor quick at moving around."
 msgstr ""
 
-#, fuzzy
-#~| msgid "sword"
-#~ msgid "long sword"
-#~ msgstr "sƿeord"
-
 #~ msgid "Elder Falcon"
 #~ msgstr "Eldra Fealca"
 
 #~ msgid "Falcon"
 #~ msgstr "Fealca"
-
-#, fuzzy
-#~| msgid "fire claws"
-#~ msgid "fire arrow"
-#~ msgstr "fyr claƿe"
