updated Indonesian and Latvian translation

--- a/po/wesnoth-aoi/lv.po
+++ b/po/wesnoth-aoi/lv.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.7.10\n"
+"Project-Id-Version: Battle for Wesnoth 1.9.10+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-05-30 20:47+0200\n"
-"PO-Revision-Date: 2010-03-22 22:00+0300\n"
+"PO-Revision-Date: 2011-11-12 23:55+0300\n"
 "Last-Translator: Reinis Danne <rei4dan@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -89,7 +89,7 @@ msgstr "Pēc 1.4 stāsta un spēles uzlabojumi"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Mākslas darbu un grafikas dizains"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -344,7 +344,6 @@ msgstr "Kungs!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
 msgstr "Pārņem... vadību... Padzen tos... prom."
 
@@ -360,7 +359,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
@@ -368,7 +366,7 @@ msgid ""
 msgstr ""
 "Es esmu pārspēts, bet kauja nebija taisnīga... tūkstots lāstu pār tevi, "
 "savītušais gļēvuli! Kaut tu ciestu... un kad mans kungs, Rualša, jūs "
-"atradīs, lai viņš noslauka tavus ļaudis no zemesvirsas!"
+"atradīs, lai viņš noslauka tavus ļaudis no zemes virsas!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -452,21 +450,18 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
-msgstr "Kad cīņa beigsies, man būs ko teikt. Bet pagaidām..."
+msgstr "Kad cīņa beigsies, man būs ko teikt. Bet pagaidām —"
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr "Garlsa redz elfus... jā... svaiga gaļa vilkiem. Jā, jā..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr "...koncentrēsimies un pašreizējo uzdevumu."
+msgstr "— koncentrēsimies uz pašreizējo uzdevumu."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -480,35 +475,31 @@ msgstr "Izskats var būt maldinošs. Saki vīriem, lai tie ir piesardzīgi."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
 msgstr "Jā... jā... nokaujiet tos!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
 msgstr "Sāp... neizdevās... Rualša būs nikns... "
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"Šis... Rualša atkal. Mums jādodas uz priekšu. Atbildes, kuras mēs meklējam, "
-"nav šeit. Iespējams, ka mēs tās atradīsim tālāk ziemeļos."
+"Šis... ‘Rualša’ atkal. Mums jādodas uz priekšu. Atbildes, kuras mēs "
+"meklējam, nav šeit. Iespējams, ka mēs tās atradīsim tālāk ziemeļos."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
 msgstr ""
 "Sagraujiet šo vietu un ļaujiet mežam pārņemt drupas. Mēs negribam, lai vēl "
-"kād nelabvēlis to izmanto."
+"kādi nelabvēļi to izmanto."
 
 #. [scenario]: id=03_Wasteland
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:9
@@ -548,7 +539,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -560,7 +550,7 @@ msgstr ""
 "klans nelauztu viņu senās vienošanās ar elfiem šādā veidā. Cilvēki nekad nav "
 "bijuši tik... metodiski savā iznīcināšanā, un neceļoja pietiekami lielā "
 "skaitā ziemeļos, kuri tiem likās parāk auksti un drēgni. Lielākais jautājums "
-"saglabājās - vai viņš atradīs Rualšu?"
+"palika neatbildēts - vai viņš atradīs Rualšu?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -641,25 +631,22 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
-msgstr "Tu uzvarēji... Elf... Bet tas neko... Nemaina... (*kghegh*)"
+msgstr "Tu uzvarēji... elf... Bet tas neko... nemaina... (<i>kghegh</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Mēs atradām ceļu... Tagad.. Mēs nāksim lielā skaitā... (*kghegh*) Tu nespēj "
-"iedomāties..."
+"Mēs atradām ceļu... Tagad.. mēs nāksim lielā skaitā... (<i>kghegh</i>) tu "
+"nespēj iedomāties..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "(*kghegh*) Es gaidīšu... Starp mirušajiem..."
+msgstr "(<i>Kghegh</i>) Es gaidīšu... starp mirušajiem..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1143,7 +1130,6 @@ msgstr "Ziņo."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
@@ -1197,7 +1183,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
@@ -1207,9 +1192,8 @@ msgstr ""
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "...glāzes?"
+msgstr "... Glāzes?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1240,7 +1224,6 @@ msgstr "Pēc kāda laika..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
@@ -1297,18 +1280,17 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Erlornas, diemžēl es esmu mūs pievīlis..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
 "here?"
 msgstr ""
 "Un tas viss ir labi beidzies. Bet, Linaera, ir vēl kaut kas, kas mani "
-"uztrauc. Tu esi mags. Vai tu nejūti ka kaut kas... nav kārtībā... austrumos "
+"uztrauc. Tu esi mags. Vai tu nejūti, ka kaut kas... nav kārtībā... austrumos "
 "no šejienes?"
 
 #. [message]: speaker=Linaera
@@ -1428,14 +1410,13 @@ msgstr "Sakauj Rualšu"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
 "can muster a full invasion force."
 msgstr ""
 "Mans kungs! Mēs esam smagi jājuši nedēlu, lai Jūs panāktu! Ka'lians ir "
-"apsvēris un lūdz Jūs sakaut Rualšu ātri, pirms viņš paspēj izveidot pilnus "
+"apsvēris un lūdz Jūs sakaut Rualšu ātri, pirms viņš paspēj apkopot pilnus "
 "iebrukuma spēkus."
 
 #. [message]: speaker=Rualsha
@@ -1486,6 +1467,3 @@ msgid ""
 msgstr ""
 "Es baidos, ka tas tā būs. Mēs šeit esam guvuši pirmo uzvaru, bet bet tumši "
 "laiki seko tai uz papēžiem."
-
-#~ msgid "Time runs out"
-#~ msgstr "Izbeidzas laiks"
