--- a/po/wesnoth-sof/ko.po
+++ b/po/wesnoth-sof/ko.po
@@ -1657,8 +1657,8 @@ msgstr ""
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:157
 msgid ""
-"That makes sense, I guess you would want to plan the sceptre’s design... what in "
-"particular do you want him to do?"
+"That makes sense, I guess you would want to plan the sceptre’s design... "
+"what in particular do you want him to do?"
 msgstr ""
 
 #. [message]: speaker=Thursagan
