'Create new map' -> 'Create New Map' for the button in the New Map dialog.

--- a/po/wesnoth-lib/af.po
+++ b/po/wesnoth-lib/af.po
@@ -1532,7 +1532,7 @@ msgstr "Hoogte:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Maak Nuwe Kaart"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
