--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -1590,7 +1590,7 @@ msgstr "Höhe:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Karte erstellen"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
