--- a/po/wesnoth-lib/el.po
+++ b/po/wesnoth-lib/el.po
@@ -1538,7 +1538,7 @@ msgstr "Ύψος:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Νέος Χάρτης"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
