--- a/po/wesnoth-lib/la.po
+++ b/po/wesnoth-lib/la.po
@@ -1425,7 +1425,7 @@ msgstr "Altitudo:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Chartam novam creare"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
