--- a/po/wesnoth-lib/lv.po
+++ b/po/wesnoth-lib/lv.po
@@ -1418,7 +1418,7 @@ msgstr "Augstums:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Izveidot jaunu mapi"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
