--- a/po/wesnoth-lib/ang.po
+++ b/po/wesnoth-lib/ang.po
@@ -1429,7 +1429,7 @@ msgstr "ᚻᛁᛖᚻᚦᚢ:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr ""
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
