--- a/po/wesnoth-lib/ar.po
+++ b/po/wesnoth-lib/ar.po
@@ -1541,7 +1541,7 @@ msgstr "الطول:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "إنشاء خريطة جديدة"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
