--- a/po/wesnoth-lib/da.po
+++ b/po/wesnoth-lib/da.po
@@ -1542,7 +1542,7 @@ msgstr "Højde:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Opret nyt kort"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
