--- a/po/wesnoth-lib/en@shaw.po
+++ b/po/wesnoth-lib/en@shaw.po
@@ -1515,7 +1515,7 @@ msgstr "𐑣𐑲𐑑:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "𐑒𐑮𐑰𐑱𐑑 𐑯𐑿 𐑥𐑨𐑐"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
