--- a/po/wesnoth-lib/es.po
+++ b/po/wesnoth-lib/es.po
@@ -1447,7 +1447,7 @@ msgstr "Altura:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Crear un mapa nuevo"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
