--- a/po/wesnoth-lib/et.po
+++ b/po/wesnoth-lib/et.po
@@ -1593,7 +1593,7 @@ msgstr "Kõrgus:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Loo uus kaart"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
