--- a/po/wesnoth-lib/eu.po
+++ b/po/wesnoth-lib/eu.po
@@ -1531,7 +1531,7 @@ msgstr "Altuera:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Mapa berria egin"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
