--- a/po/wesnoth-lib/fi.po
+++ b/po/wesnoth-lib/fi.po
@@ -1454,7 +1454,7 @@ msgstr "Korkeus:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Luo uusi kartta"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
