--- a/po/wesnoth-lib/ga.po
+++ b/po/wesnoth-lib/ga.po
@@ -1424,7 +1424,7 @@ msgstr "Airde:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Cruthaigh léarscáil nua"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
