--- a/po/wesnoth-lib/id.po
+++ b/po/wesnoth-lib/id.po
@@ -1425,7 +1425,7 @@ msgstr "Tinggi:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Cipta peta baru"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
