--- a/po/wesnoth-lib/is.po
+++ b/po/wesnoth-lib/is.po
@@ -1537,7 +1537,7 @@ msgstr "Lengd:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Nýtt kort"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
