--- a/po/wesnoth-lib/ja.po
+++ b/po/wesnoth-lib/ja.po
@@ -1516,7 +1516,7 @@ msgstr "高さ:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "新しいマップの作成"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
