--- a/po/wesnoth-lib/ko.po
+++ b/po/wesnoth-lib/ko.po
@@ -1414,7 +1414,7 @@ msgstr "높이:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr ""
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
