--- a/po/wesnoth-lib/lt.po
+++ b/po/wesnoth-lib/lt.po
@@ -1446,7 +1446,7 @@ msgstr "Aukštis:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Sukurti naują žemėlapį"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
