--- a/po/wesnoth-lib/nb_NO.po
+++ b/po/wesnoth-lib/nb_NO.po
@@ -1533,7 +1533,7 @@ msgstr "Høyde:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Lag nytt kart"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
