--- a/po/wesnoth-lib/nl.po
+++ b/po/wesnoth-lib/nl.po
@@ -1518,7 +1518,7 @@ msgstr "Hoogte:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Nieuwe kaart maken"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
