--- a/po/wesnoth-lib/pl.po
+++ b/po/wesnoth-lib/pl.po
@@ -1519,7 +1519,7 @@ msgstr "Wysokość:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Stwórz nową mapę"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
