--- a/po/wesnoth-lib/pt.po
+++ b/po/wesnoth-lib/pt.po
@@ -1491,7 +1491,7 @@ msgstr "Altura:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Criar Novo Mapa"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
