--- a/po/wesnoth-lib/racv.po
+++ b/po/wesnoth-lib/racv.po
@@ -1540,7 +1540,7 @@ msgstr "Altura:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Nou mapa"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
