--- a/po/wesnoth-lib/ru.po
+++ b/po/wesnoth-lib/ru.po
@@ -1432,7 +1432,7 @@ msgstr "Высота:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Создать новую карту"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
