--- a/po/wesnoth-lib/sr@ijekavianlatin.po
+++ b/po/wesnoth-lib/sr@ijekavianlatin.po
@@ -1522,7 +1522,7 @@ msgstr "Visina:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Napravi novu mapu"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
