--- a/po/wesnoth-lib/sv.po
+++ b/po/wesnoth-lib/sv.po
@@ -1423,7 +1423,7 @@ msgstr "Höjd:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Skapa ny karta"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
