--- a/po/wesnoth-lib/tl.po
+++ b/po/wesnoth-lib/tl.po
@@ -1479,7 +1479,7 @@ msgstr "Taas:"
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
 #, fuzzy
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Gumawa ng Bagong Mapa"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
