--- a/po/wesnoth-lib/vi.po
+++ b/po/wesnoth-lib/vi.po
@@ -1424,7 +1424,7 @@ msgstr "Chiều cao:"
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "Tạo bản đồ mới"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
