--- a/po/wesnoth-lib/wesnoth-lib.pot
+++ b/po/wesnoth-lib/wesnoth-lib.pot
@@ -1426,7 +1426,7 @@ msgstr ""
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr ""
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
