--- a/po/wesnoth-lib/zh_CN.po
+++ b/po/wesnoth-lib/zh_CN.po
@@ -1518,7 +1518,7 @@ msgstr "高度："
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "创建新地图"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
