--- a/po/wesnoth-lib/zh_TW.po
+++ b/po/wesnoth-lib/zh_TW.po
@@ -1504,7 +1504,7 @@ msgstr "高度："
 #. [button]: id=ok
 #: data/gui/default/window/editor_new_map.cfg:108
 #: data/gui/default/window/editor_new_map.cfg:109
-msgid "Create new map"
+msgid "Create New Map"
 msgstr "創造新地圖"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
