Fixed capitalization in a dialog title.

--- a/po/wesnoth-editor/bg.po
+++ b/po/wesnoth-editor/bg.po
@@ -241,7 +241,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Избор на карта "
 
 #: src/editor/editor_controller.cpp:527
