--- a/po/wesnoth-editor/de.po
+++ b/po/wesnoth-editor/de.po
@@ -254,7 +254,7 @@ msgid "Map creation failed."
 msgstr "Erstellen der Karte fehlgeschlagen"
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Wählt eine Maske aus, die Ihr anwenden wollt"
 
 #: src/editor/editor_controller.cpp:527
