--- a/po/wesnoth-editor/en@shaw.po
+++ b/po/wesnoth-editor/en@shaw.po
@@ -247,7 +247,7 @@ msgid "Map creation failed."
 msgstr "𐑥𐑨𐑐 𐑒𐑮𐑰𐑱𐑖𐑩𐑯 𐑓𐑱𐑤𐑛."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "𐑗𐑵𐑟 𐑩 𐑥𐑭𐑕𐑒 𐑑 𐑩𐑐𐑤𐑲"
 
 #: src/editor/editor_controller.cpp:527
