--- a/po/wesnoth-editor/es.po
+++ b/po/wesnoth-editor/es.po
@@ -258,7 +258,7 @@ msgid "Map creation failed."
 msgstr "Falló la creación del mapa."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Escoja una máscara a aplicar"
 
 #: src/editor/editor_controller.cpp:527
