--- a/po/wesnoth-editor/et.po
+++ b/po/wesnoth-editor/et.po
@@ -250,7 +250,7 @@ msgid "Map creation failed."
 msgstr "Kaardi loomine ebaõnnestus."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Vali rakendatav mask"
 
 #: src/editor/editor_controller.cpp:527
