--- a/po/wesnoth-editor/fr.po
+++ b/po/wesnoth-editor/fr.po
@@ -254,7 +254,7 @@ msgid "Map creation failed."
 msgstr "Échec de création de la carte."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Choisir le masque à appliquer"
 
 #: src/editor/editor_controller.cpp:527
