--- a/po/wesnoth-editor/ga.po
+++ b/po/wesnoth-editor/ga.po
@@ -238,7 +238,7 @@ msgid "Map creation failed."
 msgstr "Cruthú léarscáile theipte."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Roghnaigh masc le chuir ar léarscáil"
 
 #: src/editor/editor_controller.cpp:527
