--- a/po/wesnoth-editor/gl.po
+++ b/po/wesnoth-editor/gl.po
@@ -262,7 +262,7 @@ msgid "Map creation failed."
 msgstr "Non se puido crear o mapa."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Escolle unha máscara a aplicar"
 
 #: src/editor/editor_controller.cpp:527
