--- a/po/wesnoth-editor/he.po
+++ b/po/wesnoth-editor/he.po
@@ -242,7 +242,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "בחירת מפה לטעינה"
 
 #: src/editor/editor_controller.cpp:527
