--- a/po/wesnoth-editor/ja.po
+++ b/po/wesnoth-editor/ja.po
@@ -251,7 +251,7 @@ msgid "Map creation failed."
 msgstr "マップの作成に失敗しました。"
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "適用するマスクを選択"
 
 #: src/editor/editor_controller.cpp:527
