--- a/po/wesnoth-editor/nb_NO.po
+++ b/po/wesnoth-editor/nb_NO.po
@@ -240,7 +240,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Velg kart for innlasting"
 
 #: src/editor/editor_controller.cpp:527
