--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -252,7 +252,7 @@ msgid "Map creation failed."
 msgstr "Kaart aanmaken mislukt."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Kies een masker om toe te passen"
 
 #: src/editor/editor_controller.cpp:527
