--- a/po/wesnoth-editor/pt.po
+++ b/po/wesnoth-editor/pt.po
@@ -238,7 +238,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Escolha um Mapa para Carregar"
 
 #: src/editor/editor_controller.cpp:527
