--- a/po/wesnoth-editor/sr@ijekavian.po
+++ b/po/wesnoth-editor/sr@ijekavian.po
@@ -255,7 +255,7 @@ msgstr "Стварање мапе није успјело."
 
 # наслов
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Избор маске за примјењивање"
 
 #: src/editor/editor_controller.cpp:527
