--- a/po/wesnoth-editor/sr@ijekavianlatin.po
+++ b/po/wesnoth-editor/sr@ijekavianlatin.po
@@ -256,7 +256,7 @@ msgstr "Stvaranje mape nije uspjelo."
 
 # наслов
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Izbor maske za primjenjivanje"
 
 #: src/editor/editor_controller.cpp:527
