--- a/po/wesnoth-editor/sr@latin.po
+++ b/po/wesnoth-editor/sr@latin.po
@@ -256,7 +256,7 @@ msgstr "Stvaranje mape nije uspelo."
 
 # наслов
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Izbor maske za primenjivanje"
 
 #: src/editor/editor_controller.cpp:527
