--- a/po/wesnoth-editor/tl.po
+++ b/po/wesnoth-editor/tl.po
@@ -237,7 +237,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Pumili ng mapa para buksan"
 
 #: src/editor/editor_controller.cpp:527
