--- a/po/wesnoth-editor/vi.po
+++ b/po/wesnoth-editor/vi.po
@@ -245,7 +245,7 @@ msgid "Map creation failed."
 msgstr "Tạo bản đồ thất bại."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Chọn mặt nạ cần áp dụng"
 
 #: src/editor/editor_controller.cpp:527
