--- a/po/wesnoth-editor/ar.po
+++ b/po/wesnoth-editor/ar.po
@@ -247,7 +247,7 @@ msgid "Map creation failed."
 msgstr "فشل إعداد الخرطة"
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr ""
 
 #: src/editor/editor_controller.cpp:527
