--- a/po/wesnoth-editor/ca.po
+++ b/po/wesnoth-editor/ca.po
@@ -241,7 +241,7 @@ msgstr "S'ha produït un error en la creació del mapa."
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Trieu el mapa que voleu carregar"
 
 #: src/editor/editor_controller.cpp:527
