--- a/po/wesnoth-editor/ca_ES@valencia.po
+++ b/po/wesnoth-editor/ca_ES@valencia.po
@@ -227,7 +227,7 @@ msgid "Map creation failed."
 msgstr ""
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr ""
 
 #: src/editor/editor_controller.cpp:527
