--- a/po/wesnoth-editor/en_GB.po
+++ b/po/wesnoth-editor/en_GB.po
@@ -245,8 +245,8 @@ msgid "Map creation failed."
 msgstr "Map creation failed."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
-msgstr "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
+msgstr "Choose a Mask to Apply"
 
 #: src/editor/editor_controller.cpp:527
 msgid "Error loading mask"
