--- a/po/wesnoth-editor/eo.po
+++ b/po/wesnoth-editor/eo.po
@@ -234,7 +234,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Elektu Mapon por Ŝarĝado"
 
 #: src/editor/editor_controller.cpp:527
