--- a/po/wesnoth-editor/fi.po
+++ b/po/wesnoth-editor/fi.po
@@ -250,7 +250,7 @@ msgid "Map creation failed."
 msgstr "Kartan luonti epäonnistui."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Valitse käytettävä maski"
 
 #: src/editor/editor_controller.cpp:527
