--- a/po/wesnoth-editor/hr.po
+++ b/po/wesnoth-editor/hr.po
@@ -239,7 +239,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Odaberite mapu koju želite otvoriti"
 
 #: src/editor/editor_controller.cpp:527
