--- a/po/wesnoth-editor/hu.po
+++ b/po/wesnoth-editor/hu.po
@@ -251,7 +251,7 @@ msgid "Map creation failed."
 msgstr "A pálya elkészítése meghiúsult."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Válassz ki egy alkalmazandó maszkot"
 
 #: src/editor/editor_controller.cpp:527
