--- a/po/wesnoth-editor/id.po
+++ b/po/wesnoth-editor/id.po
@@ -251,7 +251,7 @@ msgid "Map creation failed."
 msgstr "Penciptaan peta gagal."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Pilih samaran untuk dipakai"
 
 #: src/editor/editor_controller.cpp:527
