--- a/po/wesnoth-editor/ko.po
+++ b/po/wesnoth-editor/ko.po
@@ -237,7 +237,7 @@ msgid "Map creation failed."
 msgstr ""
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr ""
 
 #: src/editor/editor_controller.cpp:527
