--- a/po/wesnoth-editor/la.po
+++ b/po/wesnoth-editor/la.po
@@ -249,7 +249,7 @@ msgstr "Chartam creare male evenit."
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "|Chartam Restituendam Eligire"
 
 #: src/editor/editor_controller.cpp:527
