--- a/po/wesnoth-editor/pl.po
+++ b/po/wesnoth-editor/pl.po
@@ -249,7 +249,7 @@ msgid "Map creation failed."
 msgstr "Tworzenie mapy się nie powiodło."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Wybierz maskę do zastosowania"
 
 #: src/editor/editor_controller.cpp:527
