--- a/po/wesnoth-editor/racv.po
+++ b/po/wesnoth-editor/racv.po
@@ -237,7 +237,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Tria el mapa que vols carregar"
 
 #: src/editor/editor_controller.cpp:527
