--- a/po/wesnoth-editor/ro.po
+++ b/po/wesnoth-editor/ro.po
@@ -237,7 +237,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:520
 #, fuzzy
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Alegeti o harta de incarcat"
 
 #: src/editor/editor_controller.cpp:527
