--- a/po/wesnoth-editor/ru.po
+++ b/po/wesnoth-editor/ru.po
@@ -265,7 +265,7 @@ msgid "Map creation failed."
 msgstr "Не удалось создать карту."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Выберите, какую маску применить"
 
 #: src/editor/editor_controller.cpp:527
