--- a/po/wesnoth-editor/sk.po
+++ b/po/wesnoth-editor/sk.po
@@ -248,7 +248,7 @@ msgid "Map creation failed."
 msgstr "Nepodarilo sa vytvoriť mapu."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Vyberte si masku, ktorá sa má použiť"
 
 #: src/editor/editor_controller.cpp:527
