--- a/po/wesnoth-editor/sr.po
+++ b/po/wesnoth-editor/sr.po
@@ -255,7 +255,7 @@ msgstr "Стварање мапе није успело."
 
 # наслов
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Избор маске за примењивање"
 
 #: src/editor/editor_controller.cpp:527
