--- a/po/wesnoth-editor/sv.po
+++ b/po/wesnoth-editor/sv.po
@@ -253,7 +253,7 @@ msgid "Map creation failed."
 msgstr "Misslyckades med att skapa karta."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Välj en markering att applicera"
 
 #: src/editor/editor_controller.cpp:527
