--- a/po/wesnoth-editor/tr.po
+++ b/po/wesnoth-editor/tr.po
@@ -253,7 +253,7 @@ msgid "Map creation failed."
 msgstr "Harita oluşturulamadı."
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "Uygulanacak örüntüyü seçiniz"
 
 #: src/editor/editor_controller.cpp:527
