--- a/po/wesnoth-editor/zh_CN.po
+++ b/po/wesnoth-editor/zh_CN.po
@@ -245,7 +245,7 @@ msgid "Map creation failed."
 msgstr "创建地图失败。"
 
 #: src/editor/editor_controller.cpp:520
-msgid "Choose a mask to apply"
+msgid "Choose a Mask to Apply"
 msgstr "选择要使用的遮罩"
 
 #: src/editor/editor_controller.cpp:527
