Fixed capitalization in another dialog title.

--- a/po/wesnoth-editor/cs.po
+++ b/po/wesnoth-editor/cs.po
@@ -265,7 +265,7 @@ msgid "Error loading mask"
 msgstr "Chyba při načítání masky"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "vyber cílovou mapu"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
