--- a/po/wesnoth-editor/de.po
+++ b/po/wesnoth-editor/de.po
@@ -262,7 +262,7 @@ msgid "Error loading mask"
 msgstr "Fehler beim Laden der Maske"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Wählt die Zielkarte"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
