--- a/po/wesnoth-editor/en@shaw.po
+++ b/po/wesnoth-editor/en@shaw.po
@@ -255,7 +255,7 @@ msgid "Error loading mask"
 msgstr "𐑻𐑹 𐑤𐑴𐑛𐑦𐑙 𐑥𐑭𐑕𐑒"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "𐑗𐑵𐑟 𐑑𐑸𐑜𐑧𐑑 𐑥𐑨𐑐"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
