--- a/po/wesnoth-editor/ga.po
+++ b/po/wesnoth-editor/ga.po
@@ -246,7 +246,7 @@ msgid "Error loading mask"
 msgstr "Earráid i lódáil an masc"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Roghnaigh léarscáil sprice"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
