--- a/po/wesnoth-editor/gl.po
+++ b/po/wesnoth-editor/gl.po
@@ -270,7 +270,7 @@ msgid "Error loading mask"
 msgstr "Houbo un erro ao cargar a máscara"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Escolle o mapa de destino"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
