--- a/po/wesnoth-editor/it.po
+++ b/po/wesnoth-editor/it.po
@@ -261,7 +261,7 @@ msgid "Error loading mask"
 msgstr "Errore di caricamento della maschera"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Scegli la mappa"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
