--- a/po/wesnoth-editor/ja.po
+++ b/po/wesnoth-editor/ja.po
@@ -259,7 +259,7 @@ msgid "Error loading mask"
 msgstr "マスクの読み込みに失敗"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "ターゲットマップを選択"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
