--- a/po/wesnoth-editor/pt_BR.po
+++ b/po/wesnoth-editor/pt_BR.po
@@ -258,7 +258,7 @@ msgid "Error loading mask"
 msgstr "Erro carregando a máscara"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Escolha o mapa alvo"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
