--- a/po/wesnoth-editor/zh_CN.po
+++ b/po/wesnoth-editor/zh_CN.po
@@ -253,7 +253,7 @@ msgid "Error loading mask"
 msgstr "读取遮罩时发生错误"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "选择目标地图"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
