--- a/po/wesnoth-editor/zh_TW.po
+++ b/po/wesnoth-editor/zh_TW.po
@@ -246,7 +246,7 @@ msgid "Error loading mask"
 msgstr "讀取遮罩時錯誤"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "選擇目標地圖"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
