--- a/po/wesnoth-editor/es.po
+++ b/po/wesnoth-editor/es.po
@@ -266,7 +266,7 @@ msgid "Error loading mask"
 msgstr "Error al cargar la máscara"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Escoja mapa de destino"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
