--- a/po/wesnoth-editor/et.po
+++ b/po/wesnoth-editor/et.po
@@ -258,7 +258,7 @@ msgid "Error loading mask"
 msgstr "Viga maski laadimisel"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Vali sihtkaart"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
