--- a/po/wesnoth-editor/fr.po
+++ b/po/wesnoth-editor/fr.po
@@ -262,7 +262,7 @@ msgid "Error loading mask"
 msgstr "Erreur lord du chargement du masque"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Choisir la carte de destination"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
