--- a/po/wesnoth-editor/hu.po
+++ b/po/wesnoth-editor/hu.po
@@ -259,7 +259,7 @@ msgid "Error loading mask"
 msgstr "Hiba a maszk betöltésekor"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Válaszd ki a célpályát"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
