--- a/po/wesnoth-editor/is.po
+++ b/po/wesnoth-editor/is.po
@@ -259,7 +259,7 @@ msgid "Error loading mask"
 msgstr "Villa við hlöðun skugga"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Veldu miðkort"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
