--- a/po/wesnoth-editor/la.po
+++ b/po/wesnoth-editor/la.po
@@ -257,7 +257,7 @@ msgid "Error loading mask"
 msgstr "Error dum velamen arcessitur"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Chartam deligere."
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
