--- a/po/wesnoth-editor/lt.po
+++ b/po/wesnoth-editor/lt.po
@@ -248,7 +248,7 @@ msgid "Error loading mask"
 msgstr "Klaida, įkeliant kaukę"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Pasirinkite žemėlapį"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
