--- a/po/wesnoth-editor/lv.po
+++ b/po/wesnoth-editor/lv.po
@@ -261,7 +261,7 @@ msgid "Error loading mask"
 msgstr "Kļūda ielādējot masku"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Izvēlieties mērķa karti"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
