--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -260,7 +260,7 @@ msgid "Error loading mask"
 msgstr "Fout bij het laden van het masker"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Kies doelkaart"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
