--- a/po/wesnoth-editor/pl.po
+++ b/po/wesnoth-editor/pl.po
@@ -257,7 +257,7 @@ msgid "Error loading mask"
 msgstr "Błąd ładowania maski"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Wybierz docelową mapę"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
