--- a/po/wesnoth-editor/ru.po
+++ b/po/wesnoth-editor/ru.po
@@ -273,7 +273,7 @@ msgid "Error loading mask"
 msgstr "Не удалось заглузить маску"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Выберите целевую карту"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
