--- a/po/wesnoth-editor/sk.po
+++ b/po/wesnoth-editor/sk.po
@@ -256,7 +256,7 @@ msgid "Error loading mask"
 msgstr "Chyba pri čítaní masky"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Vyberte si cieľovú mapu"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
