--- a/po/wesnoth-editor/sr@latin.po
+++ b/po/wesnoth-editor/sr@latin.po
@@ -265,7 +265,7 @@ msgstr "Greška pri učitavanju maske"
 
 # наслов
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Izbor ciljne mape"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
