--- a/po/wesnoth-editor/vi.po
+++ b/po/wesnoth-editor/vi.po
@@ -253,7 +253,7 @@ msgid "Error loading mask"
 msgstr "Lỗi khi tải mặt nạ"
 
 #: src/editor/editor_controller.cpp:542
-msgid "Choose target map"
+msgid "Choose Target Map"
 msgstr "Chọn bản đồ đích"
 
 #: src/editor/editor_controller.cpp:549 src/editor/editor_controller.cpp:739
